# Antigravity-Manager

./: .gitignore  AGENTS.md  AI.md  CHANGELOG.md  CORS_FIX_REPORT.md  Cargo.toml  DEPLOYMENT.md  HEADLESS_DEPLOYMENT.md  HEADLESS_DEPLOYMENT_EN.md  README.md  README_EN.md  README_JA.md  build-headless.sh  docker-compose.yml  env.example  eslint.config.js  install.ps1  install.sh  main.py  package-lock.json  package-server.sh  package.json  pr-body-updated.md  pr_2044.patch  request_transform.md  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  模型轮询.md
server/: Cargo.toml  Dockerfile
server/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
server/src/models/: account.rs  config.rs  mod.rs  quota.rs  token.rs
server/src/modules/: account.rs  logger.rs  migration.rs  mod.rs  oauth_server.rs  process.rs  quota.rs
server/src/modules/proxy/: client.rs  config.rs  mod.rs  project_resolver.rs  server.rs  token_manager.rs
server/src/proxy/: client.rs  mod.rs
server/src/routes/: api.rs  health.rs  mod.rs  proxy.rs  static_files.rs
server/src/services/: account_service.rs  http_client.rs  mod.rs  oauth_service.rs  token_manager.rs
server/src/utils/: http.rs
src-tauri/: Cargo.toml  THINKING_MODELS.md  tauri.conf.dev.json  tauri.conf.json  tauri.dev.conf.json
src-tauri/resources/: model_specs.json
src-tauri/src/: constants.rs  error.rs  lib.rs  web_api.rs
src-tauri/src/commands/: account.rs  config.rs  detection.rs  device.rs  import.rs  mod.rs  oauth.rs  patch.rs  proxy.rs  quota.rs  security.rs  stats.rs  system.rs
src-tauri/src/commands/proxy/: accounts.rs  config.rs  external.rs  lifecycle.rs  logs.rs  mod.rs  status.rs  types.rs
src-tauri/src/models/: account.rs  config.rs  mod.rs  quota.rs  token.rs
src-tauri/src/modules/: account.rs  account_service.rs  cloudflared.rs  config.rs  db.rs  device.rs  http_api.rs  i18n.rs  integration.rs  log_bridge.rs  logger.rs  migration.rs  mod.rs  oauth.rs  oauth_server.rs  process.rs  proxy_db.rs  quota.rs  scheduler.rs  security_db.rs  tray.rs  update_checker.rs  user_token_db.rs  version.rs
src-tauri/src/modules/account/: crud.rs  device.rs  mod.rs  quota.rs  storage.rs  switch.rs
src-tauri/src/modules/process/: detection.rs  helpers.rs  lifecycle.rs  mod.rs  paths.rs
src-tauri/src/proxy/: cache.rs  cli_sync.rs  config.rs  detection.rs  health_checker.rs  mod.rs  model_specs.rs  monitor.rs  observability.rs  opencode_sync.rs  project_resolver.rs  proxy_pool.rs  rate_limit.rs  security.rs  server.rs  signature_cache.rs  sticky_config.rs  token_manager.rs  user_agent.rs  zai_web_tools.rs
src-tauri/src/proxy/admin/: logs.rs  mod.rs  models.rs  stats.rs
src-tauri/src/proxy/common/: debug_flags.rs  json_schema.rs  mod.rs  model_fallback.rs  model_mapping.rs  rate_limiter.rs  variant_mapping.rs
src-tauri/src/proxy/handlers/: admin.rs  audio.rs  claude.rs  common.rs  cursor.rs  feedback_utils.rs  gemini.rs  mcp.rs  mod.rs  openai.rs  warmup.rs
src-tauri/src/proxy/mappers/: common_utils.rs  constants.rs  error_classifier.rs  mod.rs  model_limits.rs  signature_store.rs  tool_result_compressor.rs
src-tauri/src/proxy/middleware/: access_log.rs  admin_auth.rs  auth.rs  ip_filter.rs  mod.rs  monitor.rs  stats.rs
src-tauri/src/proxy/providers/: codex_cli.rs  fallback_provider.rs  mod.rs  zai_anthropic.rs
src-tauri/src/proxy/rate_limit/: mod.rs  parsing.rs  types.rs
src-tauri/src/proxy/server/: mod.rs  oauth.rs  routes.rs  types.rs
src-tauri/src/proxy/tests/: auth_middleware_test.rs  budget_pattern_integration_tests.rs  comprehensive.rs  mod.rs  quota_protection.rs  thinking_models.rs  token_manager_test.rs  ultra_priority_tests.rs
src-tauri/src/proxy/token_manager/: loading.rs  manager.rs  mod.rs  models.rs  persistence.rs  quota.rs  rate_limiting.rs  scheduling.rs  selection.rs
src-tauri/src/shared/: db_pool.rs  mod.rs
src-tauri/src/utils/: command.rs  crypto.rs  http.rs  protobuf.rs
src-tauri/static/: admin.html
src-tauri/tests/: gemini_budget_optimizer_tests.rs  validate_flash_lite_thinking.rs
(+531 files in other folders)
